Added files and changes required for deployment to heroku

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
+appdirs==1.4.4
 asgiref==3.2.10
+autopep8==1.5.7
+certifi==2020.12.5
+chardet==4.0.0
+distlib==0.3.2
 Django==3.1.2
+expertai-nlapi==2.3.1
+filelock==3.0.12
+idna==2.10
+mysql-connector==2.2.9
+pycodestyle==2.7.0
 pytz==2020.1
+requests==2.25.1
+six==1.16.0
 sqlparse==0.4.1
+toml==0.10.2
+urllib3==1.26.4
+virtualenv==20.4.7
+whitenoise==5.2.0
