--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ distlib==0.3.2
 Django==3.1.2
 expertai-nlapi==2.3.1
 filelock==3.0.12
+gunicorn==20.1.0
 idna==2.10
 mysql-connector==2.2.9
 pycodestyle==2.7.0
